syntax = "proto3";
package message;

service MessageService {
    rpc createMessage(MessageCreate) returns (MessageID) {}
    rpc getMessage(MessageID) returns (MessageData) {}
}

message MessageID {
    string mid = 1;
}

message MessageCreate {
    string uid = 1;
    string messagetitle = 2;
    string messagetext = 3;
    string creationtime = 4;
}

message MessageData {
    string mid = 1;
    string uid = 2;
    string messagetitle = 3;
    string messagetext = 4;
    string creationtime = 5;
    bool read = 6;
}